# filewatchasync

./: .gitignore  Cargo.toml  README.md  app.py  config.json
.idx/: dev.nix
go_filewatch/: config.json  go.mod  main.go
src/: main.rs  mod.rs
src/modimpl/: config.rs  copyfilerecord.rs  fileinfo.rs  filemonitor.rs  healthstatus.rs  mod.rs  watchfolder.rs
